# cli

./: Makefile  README.md  install.sh  pyproject.toml  update_version.py
.github/workflows/: notify-docs-update.yaml  publish-reference-docs.yaml  release.yaml  test.yaml
Formula/: judgment-cli.rb
scripts/: generate_cli.py  generate_formula.py  generate_reference.py  help_overrides.py
src/judgment_cli/: __init__.py  client.py  config.py  env.py  generated_commands.py  judges.py  main.py  scorer_bundle.py  ui.py
src/judgment_cli/commands/: __init__.py  traces.py
tests/: conftest.py  test_generated_commands.py
